// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1- default state 1`] = `
Object {
  "error": false,
  "list": Array [],
  "loading": false,
  "order": "trending",
}
`;

exports[`2- fetch 1`] = `
Object {
  "error": false,
  "list": Array [],
  "loading": true,
  "order": "trending",
}
`;

exports[`3- fetch error 1`] = `
Object {
  "error": true,
  "list": Array [],
  "loading": false,
  "order": "trending",
}
`;

exports[`4- fetch 1`] = `
Object {
  "error": false,
  "list": Array [],
  "loading": true,
  "order": "trending",
}
`;

exports[`5- fetched 1`] = `
Object {
  "error": false,
  "list": Array [
    Object {
      "active_votes": Array [
        Object {
          "rshares": 34273117581576,
          "voter": "user1",
        },
        Object {
          "rshares": 2269348064337,
          "voter": "user2",
        },
        Object {
          "rshares": 19969726098,
          "voter": "user3",
        },
        Object {
          "rshares": 725359024516,
          "voter": "user4",
        },
        Object {
          "rshares": 24029616493,
          "voter": "user5",
        },
        Object {
          "rshares": 1485954337,
          "voter": "user6",
        },
        Object {
          "rshares": 1281560607198,
          "voter": "user7",
        },
        Object {
          "rshares": 554323413016,
          "voter": "user8",
        },
        Object {
          "rshares": 140063022903,
          "voter": "user9",
        },
        Object {
          "rshares": 542424211,
          "voter": "user10",
        },
      ],
      "author": "good-karma",
      "author_payout_value": "0.000 HBD",
      "author_reputation": 76.58,
      "beneficiaries": Array [
        Object {
          "account": "esteemapp",
          "weight": 300,
        },
      ],
      "blacklists": Array [],
      "body": "Hey developers,

![awesome-hive.png](https://images.ecency.com/DQmetNmv6rtcRxueXJSNm7ErLLKNYGJETxsNSoehn6xk9BC/awesome-hive.png)

I just created [Awesome-Hive](https://github.com/ledgerconnect/awesome-hive), list of services and apps on Hive.

If you don't know about Awesome project, take a look at here: https://project-awesome.org/

Project contains list of services and links to various tools and libraries. Quite useful if you are developing or learning some new programming languages or skills. So we now have \`awesome-hive\` list, feel free to submit your pull request to add your apps, services. 

I will submit PR to project awesome in 30 days to list Hive in decentralized systems section. One of the requirements, awesome list should be around for more than 30 days. So I ask anyone with service, tools, dapps to submit pull request to https://github.com/ledgerconnect/awesome-hive so we have complete list of services by end of June.

In 30 days, we will PR to official project awesome list. More awareness about awesome Hive! Meanwhile, let's complete \`awesome-hive\` together! 😎 🙇 🙏 

## Hive on!",
      "category": "hive",
      "children": 31,
      "created": "2020-06-01T05:53:33",
      "curator_payout_value": "0.000 HBD",
      "depth": 0,
      "is_paidout": false,
      "json_metadata": Object {
        "app": "esteem/2.2.7-surfer",
        "tags": Array [
          "hive",
          "hiveio",
          "awesome",
          "devs",
          "development",
          "list",
        ],
      },
      "max_accepted_payout": "1000000.000 HBD",
      "net_rshares": 234863836438976,
      "payout": 125.095,
      "payout_at": "2020-06-08T05:53:33",
      "pending_payout_value": "125.095 HBD",
      "percent_hbd": 10000,
      "permlink": "awesome-hive",
      "post_id": 86342505,
      "promoted": "0.000 HBD",
      "replies": Array [],
      "stats": Object {
        "flag_weight": 1,
        "gray": false,
        "hide": false,
        "total_votes": 10,
      },
      "title": "Awesome Hive",
      "updated": "2020-06-01T14:41:15",
      "url": "/hive/@good-karma/awesome-hive",
    },
  ],
  "loading": false,
  "order": "trending",
}
`;

exports[`6- reset 1`] = `
Object {
  "error": false,
  "list": Array [],
  "loading": false,
  "order": "trending",
}
`;
